# template_filler

./: .env.example  .gitignore  ADVANCED.md  Dockerfile  QUICKSTART.md  README.md  STRUCTURE.md  TESTING.md  docker-compose.yml  docx_example.json  example_certificate (copia).json  example_contract (copia).json  example_invoice.json  pyproject.toml  requirements.txt  wsgi.py
docs/: __init__.py  admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
docs/management/commands/: retry_failed_jobs.py
docs/migrations/: 0001_initial.py  0002_alter_documentjob_table.py  0003_alter_documentjob_options_and_more.py  0004_documentjob_file_name.py
docs/static/css/: style.css
docs/static/js/: i18n.js
docs/templates/admin/: base_site.html  login.html
docs/templates/docs/: upload.html
documentos/: __init__.py  admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
documentos/management/commands/: retry_failed_jobs.py
documentos/static/documentos/: i18n.js
documentos/templates/documentos/: upload.html
project/: __init__.py  celery.py  settings.py  urls.py
templates_doc/: certificate.html.j2  contract.html.j2  docx_contract.docx  invoice.html.j2
