[tool.poetry]
name = "template-filler"
version = "0.1.0"
description = "Generador completo de documentos (PDF, DOCX, JSON) usando Django, Celery, Jinja2 y WeasyPrint"
authors = ["GitRadiation <prietoreyesalvaro@gmail.com>"]
readme = "README.md"
packages = [
    { include = "project" },
    { include = "documentos" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
celery = "^5.6"
redis = "^5.0"
psycopg2-binary = "^2.9"
gunicorn = "^23.0"
docxtpl = "^0.20"
django-cors-headers = "^4.3"
django-widget-tweaks = "^1.5"
python-decouple = "^3.8"
pillow = "^11.0"
jinja2 = "^3.1"
weasyprint = "^67.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^6.0"
isort = "^6.0"
pytest = "^8.0"
pytest-django = "^4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
